--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.aula_7.edittext.MainActivity"
     android:orientation="vertical"
-    android:padding="20dp"
-    >
+    android:padding="20dp">
 
     <EditText
         android:layout_height="wrap_content"
@@ -27,7 +27,9 @@
 <android.support.design.widget.TextInputLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:theme="@style/mystile">
+    android:theme="@style/mystile"
+    app:counterEnabled="true"
+    app:counterMaxLength="30">
 
     <android.support.design.widget.TextInputEditText
         android:layout_width="match_parent"
@@ -41,10 +43,16 @@
         android:layout_height="wrap_content"
         android:theme="@style/mystile">
 
+
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/stY"/>
+            android:hint="@string/stY"
+            android:inputType="textWebPassword"/>
     </android.support.design.widget.TextInputLayout>
-
+<Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/btn_1"
+    android:theme="@style/mystileboton"/>
 </LinearLayout>
